@@ -31,9 +31,10 @@ import org.springframework.beans.factory.InitializingBean;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.io.Serial;
 import java.io.Serializable;
-import java.util.Arrays;
 import java.util.Date;
+import java.util.List;
 
 /**
  * TestDataProvider.
@@ -41,74 +42,76 @@ import java.util.Date;
 @Service
 public class TestDataProvider implements Serializable, InitializingBean {
 
-	private static final long serialVersionUID = 1L;
-	private static final Logger log = LogManager.getLogger(TestDataProvider.class);
+    @Serial
+    private static final long serialVersionUID = 1L;
+    private static final Logger log = LogManager.getLogger(TestDataProvider.class);
 
-	public static final String[] POSITIONS = {
-			"Developer",
-			"System Architect",
-			"Sales Manager",
-			"CEO"
-	};
+    public static final String[] POSITIONS = {
+            "Developer",
+            "System Architect",
+            "Sales Manager",
+            "CEO"
+    };
 
-	public static final String[] LEVELS = {
-			"Junior",
-			"Senior",
-			"Master"
-	};
+    public static final String[] LEVELS = {
+            "Junior",
+            "Senior",
+            "Master"
+    };
 
-	private static final Skill[] TEST_SKILLS = {
-			new Skill("WW-SEN", "Struts Senior Developer"),
-			new Skill("WW-JUN", "Struts Junior Developer"),
-			new Skill("SPRING-DEV", "Spring Developer")
-	};
+    private static final Skill[] TEST_SKILLS = {
+            new Skill("WW-SEN", "Struts Senior Developer"),
+            new Skill("WW-JUN", "Struts Junior Developer"),
+            new Skill("SPRING-DEV", "Spring Developer")
+    };
 
-	public static final Employee[] TEST_EMPLOYEES = {
-			new Employee(new Long(1), "Alan", "Smithee", new Date(), new Float(2000f), true, POSITIONS[0],
-					TEST_SKILLS[0], null, "alan", LEVELS[0], "Nice guy"),
-			new Employee(new Long(2), "Robert", "Robson", new Date(), new Float(10000f), false, POSITIONS[1],
-					TEST_SKILLS[1], Arrays.asList(TEST_SKILLS).subList(1, TEST_SKILLS.length), "rob", LEVELS[1], "Smart guy")
-	};
+    public static final Employee[] TEST_EMPLOYEES = {
+            new Employee(1L, "Alan", "Smithee", new Date(), 2000f, true, POSITIONS[0],
+                    TEST_SKILLS[0], null, "alan", LEVELS[0], "Nice guy"),
+            new Employee(2L, "Robert", "Robson", new Date(), 10000f, false, POSITIONS[1],
+                    TEST_SKILLS[1], List.of(TEST_SKILLS).subList(1, TEST_SKILLS.length), "rob", LEVELS[1], "Smart guy")
+    };
 
-	@Autowired
-	private SkillDao skillDao;
+    @Autowired
+    private SkillDao skillDao;
 
-	@Autowired
-	private EmployeeDao employeeDao;
+    @Autowired
+    private EmployeeDao employeeDao;
 
-	protected void addTestSkills() {
-		try {
-			for (int i = 0, j = TEST_SKILLS.length; i < j; i++) {
-				skillDao.merge(TEST_SKILLS[i]);
-			}
-			if (log.isInfoEnabled()) {
-				log.info("TestDataProvider - [addTestSkills]: Added test skill data.");
-			}
-		} catch (StorageException e) {
-			log.error("TestDataProvider - [addTestSkills]: Exception catched: " + e.getMessage());
-		}
-	}
+    protected void addTestSkills() {
+        try {
+            for (Skill testSkill : TEST_SKILLS) {
+                skillDao.merge(testSkill);
+            }
+            if (log.isInfoEnabled()) {
+                log.info("TestDataProvider - [addTestSkills]: Added test skill data.");
+            }
+        } catch (StorageException e) {
+            log.error("TestDataProvider - [addTestSkills]: Exception caught: {}", e.getMessage());
+        }
+    }
 
-	protected void addTestEmployees() {
-		try {
-			for (int i = 0, j = TEST_EMPLOYEES.length; i < j; i++) {
-				employeeDao.merge(TEST_EMPLOYEES[i]);
-			}
-			if (log.isInfoEnabled()) {
-				log.info("TestDataProvider - [addTestEmployees]: Added test employee data.");
-			}
-		} catch (StorageException e) {
-			log.error("TestDataProvider - [addTestEmployees]: Exception catched: " + e.getMessage());
-		}
-	}
+    protected void addTestEmployees() {
+        try {
+            for (Employee testEmployee : TEST_EMPLOYEES) {
+                employeeDao.merge(testEmployee);
+            }
+            if (log.isInfoEnabled()) {
+                log.info("TestDataProvider - [addTestEmployees]: Added test employee data.");
+            }
+        } catch (StorageException e) {
+            log.error("TestDataProvider - [addTestEmployees]: Exception caught: {}", e.getMessage());
+        }
+    }
 
-	protected void addTestData() {
-		addTestSkills();
-		addTestEmployees();
-	}
+    protected void addTestData() {
+        addTestSkills();
+        addTestEmployees();
+    }
 
-	public void afterPropertiesSet() throws Exception {
-		addTestData();
-	}
+    @Override
+    public void afterPropertiesSet() throws Exception {
+        addTestData();
+    }
 
 }
